# desafio-todos-jsonplaceholder

./: .gitignore  DESAFIO.md  README.md  docker-compose.yaml  flask_dockerfile  pyproject.toml  requirements-dev.txt  requirements-prod.txt
tests/: test_todos_framework.py
todos_framework/: main.py
todos_framework/dao/: todo_dao.py
todos_framework/endpoint/: todo_router.py
todos_framework/model/: messages_error_schema.py  todo_swagger.py  todos_schema.py
todos_framework/utils/: common_errors.py  constants.py  logger.py  x_requests.py
