[tool.poetry]
authors = ["gladson <gladsonbrito@gmail.com>"]
description = ""
name = "todos_framework"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
flask-restx = "^0.5.1"
httpx = {extras = ["http2"], version = "^0.22.0"}
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"
ipython = "^8.0.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
